<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ma Premiere Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello !</string>
    <string name="action_settings">Settings</string>
    <string name="weight">Poids</string>
    <string name="size">Taille</string>
    <string name="meter">Mètre</string>
    <string name="centimeter">Centimètre</string>
    <string name="mega_function">Mega fonction !</string>
    <string name="calculate">Calculer l\'IMC</string>
    <string name="raz">RAZ</string>
    <string name="result">Résultat</string>
    <string name="default_result">Vous devez cliquer sur le bouton \"Calculer l\'IMC\" pour obtenir un résultat</string>
    <string name="mega_result">Vous êtes tellement beau et fort !</string>
    <string name="tom">Vous connaissez l\'histoire de <i>Tom Sawyers</i> ?</string>
    <string name="anais">Hello %1$s, your are %2$d</string>
    
    <string name="gras">Gras</string>
    <string name="ital">Italique</string>
    <string name="soul">Souligné</string>
    <string name="smileys">Smileys :</string>
    <string name="smiley1">smiley sourire</string>
    <string name="smiley2">smiley content</string>
    <string name="smiley3">smiley cligne</string>
    <string name="noir">Noir</string>
    <string name="bleu">Bleu</string>
    <string name="rouge">Rouge</string>
    <string name="cacher">Cacher</string>
    <string name="aff">Afficher</string>
    <string name="edit">Édition :</string>
    <string name="prev">Prévisualisation :</string>
    
    <string name="divider">séparateur</string>
    
    <string name="sexLabel">Quel est votre sexe?</string>
    <string name="masculin">Masculin</string>
    <string name="feminin">Feminin</string>
    <string name="langageLabel">Quel(s) langage(s) maîtrisez-vous?</string>
    <string name="langageC">C</string>
    <string name="java">Java</string>
    <string name="cobol">COBOL</string>
    <string name="perl">Perl</string>
    <string name="envoyer">Envoyer</string>
    <string name="merci">Merci! Les données ont été envoyées!</string>
    
    <string name="bouton_jaloux">Bouton</string>
    <string name="jaloux">A mon tour !</string>

</resources>
