<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weight"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/poids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@id/weight_label"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/size"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:layout_below="@id/poids" />

    <EditText
        android:id="@+id/taille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/size"
        android:inputType="numberDecimal"
        android:layout_below="@id/poids"
        android:layout_toRightOf="@id/size_label"
        android:layout_alignParentRight="true" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio2"
        android:orientation="horizontal" 
        android:layout_below="@id/taille">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meter" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeter" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/mega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mega_function"
        android:layout_below="@id/group" />

    <Button
        android:id="@+id/calcul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate" 
        android:layout_below="@id/mega"/>

    <Button
        android:id="@+id/raz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raz" 
        android:layout_alignBottom="@id/calcul"
        android:layout_alignTop="@id/calcul"
        android:layout_toRightOf="@id/calcul"/>

    <TextView
        android:id="@+id/result_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="12sp"
        android:layout_below="@id/raz" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_result"
        android:layout_below="@id/result_label" />

</RelativeLayout>